--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.554.0",
+    "@aws-sdk/lib-dynamodb": "^3.554.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1599.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@jest/globals": "^29.7.0",
+    "@types/aws-lambda": "^8.10.137",
     "@types/jest": "^29.5.12",
     "aws-sdk-mock": "^5.9.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.0.0",
-    "jest": "^29.7.0"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2"
   }
 }
